# oracle-of-ammon

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  openapi.json  pyproject.toml
.github/actions/python-poetry-env/: action.yml
.github/workflows/: build.yml  dependencies.yml
oracle_of_ammon/: __main__.py
oracle_of_ammon/api/: ammon.py  health.py  models.py  oracle.py
oracle_of_ammon/api/utils/: filehandler.py
oracle_of_ammon/cli/: main.py
oracle_of_ammon/common/: logger.py
oracle_of_ammon/data/: faq.csv  faq.json  faq.tsv  faq.txt  faq.xlsx  semantic.txt  test.csv
oracle_of_ammon/locust/: locust.py
oracle_of_ammon/tests/: ammon_test.py  oracle_test.py
oracle_of_ammon/ui/: 01_🏠_Home.py
oracle_of_ammon/utils/: logger.py
search/: search_index.json
search_cli/api/: ammon.py  health.py  models.py  oracle.py
search_cli/cli/: main.py
search_cli/common/: logger.py
search_cli/tests/: ammon_test.py  oracle_test.py
