[tool.poetry]
name = "trex-arms-faq"
version = "0.1.0"
description = ""
authors = ["Kyle McLester <kmcleste@uncc.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "search_cli"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
requests = "^2.28.1"
uvicorn = "^0.20.0"
pandas = "^1.5.2"
fastapi = "^0.88.0"
farm-haystack = {git = "https://github.com/deepset-ai/haystack.git", rev = "main", extras = ["preprocessing ocr docstores"], develop = true}
pynvml = "^11.4.1"
typer = {extras = ["all"], version = "^0.7.0"}
aiofiles = "^22.1.0"
python-multipart = "^0.0.5"


[tool.poetry.group.dev.dependencies]
black = "22.6.0"
flake8 = "^6.0.0"
pre-commit = "^2.21.0"
pytest = "^7.2.0"
coverage = "^7.0.1"
ipykernel = "^6.19.4"
ipywidgets = "^8.0.4"
httpx = "^0.23.1"
bandit = {extras = ["toml"], version = "^1.7.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.bandit]
skips = ["B101", "B104", "B501"]
